--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "matrix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://divinelush.github.io/matrix/",
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-icons": "^1.0.3-alpha4",
@@ -15,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   }
 }
